[gd_scene load_steps=28 format=2]

[ext_resource path="res://Src/Player/Player.gd" type="Script" id=1]
[ext_resource path="res://Src/Player/PlayerState.gd" type="Script" id=2]
[ext_resource path="res://Src/Player/PlayerFSM.gd" type="Script" id=3]
[ext_resource path="res://Src/Player/DirectionalRotation.gd" type="Script" id=4]
[ext_resource path="res://Src/Player/MoveBob.gd" type="Script" id=5]
[ext_resource path="res://Src/MouseCapture.gd" type="Script" id=6]
[ext_resource path="res://Src/Player/MouseMove.gd" type="Script" id=7]
[ext_resource path="res://Src/Player/WishVector.gd" type="Script" id=8]
[ext_resource path="res://Src/Player/InputAction.gd" type="Script" id=9]
[ext_resource path="res://Src/Player/PlayerStance.gd" type="Script" id=10]
[ext_resource path="res://Src/Player/PlayerCamera.gd" type="Script" id=11]
[ext_resource path="res://Src/Player/FloorMovement.gd" type="Script" id=12]
[ext_resource path="res://Src/Player/DirectMovement.gd" type="Script" id=13]
[ext_resource path="res://Src/Player/PlayerMovement.gd" type="Script" id=14]
[ext_resource path="res://Src/Player/CylinderHeight.gd" type="Script" id=15]
[ext_resource path="res://Scenes/Player/PlayerMesh.tscn" type="PackedScene" id=16]
[ext_resource path="res://Src/Player/HeadAnchor.gd" type="Script" id=17]
[ext_resource path="res://Src/Player/FeetAnchor.gd" type="Script" id=18]
[ext_resource path="res://Src/Player/ViewBob.gd" type="Script" id=19]
[ext_resource path="res://Src/Player/CameraYaw.gd" type="Script" id=20]
[ext_resource path="res://Src/Player/CameraPitch.gd" type="Script" id=21]
[ext_resource path="res://Src/Player/LeanRoll.gd" type="Script" id=22]
[ext_resource path="res://Src/Player/WeaponMomentum.gd" type="Script" id=23]
[ext_resource path="res://Src/Player/WeaponBob.gd" type="Script" id=24]
[ext_resource path="res://Scenes/Weapon/Boomstick.tscn" type="PackedScene" id=25]
[ext_resource path="res://Src/RayCastSignals.gd" type="Script" id=26]

[sub_resource type="CylinderShape" id=1]
margin = 1.0
radius = 15.0
height = 56.0

[node name="Player" type="KinematicBody"]
collision_layer = 2
collision_mask = 7
collision/safe_margin = 1.0
script = ExtResource( 1 )

[node name="PlayerState" type="Node" parent="."]
script = ExtResource( 2 )

[node name="PlayerFSM" type="Node" parent="."]
script = ExtResource( 3 )

[node name="DirectionalRotation" type="Node" parent="."]
script = ExtResource( 4 )

[node name="MoveBob" type="Node" parent="."]
script = ExtResource( 5 )

[node name="Input" type="Node" parent="."]

[node name="MouseCapture" type="Node" parent="Input"]
script = ExtResource( 6 )
capture_mouse = 2

[node name="MouseMove" type="Node" parent="Input"]
script = ExtResource( 7 )

[node name="WishVector" type="Node" parent="Input"]
script = ExtResource( 8 )
left_action = "move_left"
right_action = "move_right"
forward_action = "move_forward"
back_action = "move_back"

[node name="JumpAction" type="Node" parent="Input"]
script = ExtResource( 9 )
input_action = "jump"

[node name="CrouchAction" type="Node" parent="Input"]
script = ExtResource( 9 )
input_action = "crouch"

[node name="SkateAction" type="Node" parent="Input"]
script = ExtResource( 9 )
input_action = "skate"

[node name="Tick" type="Node" parent="."]

[node name="PlayerStance" type="Node" parent="Tick"]
script = ExtResource( 10 )

[node name="PlayerCamera" type="Node" parent="Tick"]
script = ExtResource( 11 )

[node name="FloorMovement" type="Node" parent="Tick"]
script = ExtResource( 12 )

[node name="DirectMovement" type="Node" parent="Tick"]
script = ExtResource( 13 )

[node name="PlayerMovement" type="Node" parent="Tick"]
script = ExtResource( 14 )

[node name="CollisionShape" type="CollisionShape" parent="."]
shape = SubResource( 1 )

[node name="CylinderHeight" type="Node" parent="CollisionShape"]
script = ExtResource( 15 )

[node name="PlayerMesh" parent="." instance=ExtResource( 16 )]

[node name="HeadAnchor" type="Spatial" parent="."]
editor/display_folded = true
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 22, 0 )
script = ExtResource( 17 )

[node name="CameraRigTransform" type="RemoteTransform" parent="HeadAnchor"]
remote_path = NodePath("../../CameraRigGlobal/CameraRig")
update_rotation = false
update_scale = false

[node name="FeetAnchor" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, -13, 0 )
script = ExtResource( 18 )

[node name="CameraRigGlobal" type="Node" parent="."]
editor/display_folded = true

[node name="CameraRig" type="Spatial" parent="CameraRigGlobal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 22, 0 )

[node name="ViewBob" type="Spatial" parent="CameraRigGlobal/CameraRig"]
script = ExtResource( 19 )

[node name="CameraYaw" type="Spatial" parent="CameraRigGlobal/CameraRig/ViewBob"]
script = ExtResource( 20 )

[node name="PlayerMeshTransform" type="RemoteTransform" parent="CameraRigGlobal/CameraRig/ViewBob/CameraYaw"]
remote_path = NodePath("../../../../../PlayerMesh")
update_position = false
update_scale = false

[node name="CameraPitch" type="Spatial" parent="CameraRigGlobal/CameraRig/ViewBob/CameraYaw"]
script = ExtResource( 21 )

[node name="LeanRoll" type="Spatial" parent="CameraRigGlobal/CameraRig/ViewBob/CameraYaw/CameraPitch"]
script = ExtResource( 22 )

[node name="CameraTransform" type="RemoteTransform" parent="CameraRigGlobal/CameraRig/ViewBob/CameraYaw/CameraPitch/LeanRoll"]
remote_path = NodePath("../../../../../../../CameraGlobal/Camera")

[node name="CameraGlobal" type="Node" parent="."]
editor/display_folded = true

[node name="Camera" type="Camera" parent="CameraGlobal"]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 22, 0 )
cull_mask = 1048573
current = true
fov = 100.0
near = 1.0
far = 8192.0

[node name="GunAnchor" type="Spatial" parent="CameraGlobal/Camera"]
transform = Transform( 1, 0, 0, 0, 0.97437, 0.224951, 0, -0.224951, 0.97437, 0, -9.2, -14.525 )

[node name="WeaponMomentum" type="Spatial" parent="CameraGlobal/Camera/GunAnchor"]
script = ExtResource( 23 )

[node name="WeaponBob" type="Spatial" parent="CameraGlobal/Camera/GunAnchor/WeaponMomentum"]
script = ExtResource( 24 )
bob_magnitude = 3.0

[node name="Boomstick" parent="CameraGlobal/Camera/GunAnchor/WeaponMomentum/WeaponBob" instance=ExtResource( 25 )]

[node name="Uncrouch" type="Spatial" parent="."]
editor/display_folded = true

[node name="UncrouchTransform" type="RemoteTransform" parent="Uncrouch"]
remote_path = NodePath("../Node/UncrouchRayCast")
update_rotation = false
update_scale = false

[node name="Node" type="Node" parent="Uncrouch"]

[node name="UncrouchRayCast" type="RayCast" parent="Uncrouch/Node"]
enabled = true
cast_to = Vector3( 0, 42, 0 )
script = ExtResource( 26 )
[connection signal="grounded_changed" from="PlayerState" to="CameraGlobal/Camera/GunAnchor/WeaponMomentum" method="set_grounded"]
[connection signal="grounded_changed" from="PlayerState" to="MoveBob" method="set_grounded"]
[connection signal="bob_changed" from="MoveBob" to="CameraGlobal/Camera/GunAnchor/WeaponMomentum/WeaponBob" method="set_bob"]
[connection signal="bob_changed" from="MoveBob" to="CameraRigGlobal/CameraRig/ViewBob" method="set_bob"]
[connection signal="mouse_move_x" from="Input/MouseMove" to="CameraRigGlobal/CameraRig/ViewBob/CameraYaw" method="mouse_move_x"]
[connection signal="mouse_move_y" from="Input/MouseMove" to="CameraRigGlobal/CameraRig/ViewBob/CameraYaw/CameraPitch" method="mouse_move_y"]
[connection signal="down_changed" from="Input/SkateAction" to="CameraGlobal/Camera/GunAnchor/WeaponMomentum" method="set_enable_momentum"]
[connection signal="down_changed" from="Input/SkateAction" to="MoveBob" method="set_bob_disabled"]
[connection signal="floor_move" from="Tick/FloorMovement" to="Tick/DirectMovement" method="add_delta_move"]
[connection signal="moved" from="Tick/PlayerMovement" to="CameraGlobal/Camera/GunAnchor/WeaponMomentum" method="moved"]
[connection signal="moved" from="Tick/PlayerMovement" to="CameraRigGlobal/CameraRig/ViewBob/CameraYaw/CameraPitch/LeanRoll" method="moved"]
[connection signal="moved" from="Tick/PlayerMovement" to="MoveBob" method="moved"]
[connection signal="height_changed" from="CollisionShape/CylinderHeight" to="HeadAnchor" method="set_height"]
[connection signal="height_changed" from="CollisionShape/CylinderHeight" to="FeetAnchor" method="set_height"]
[connection signal="height_changed_delta" from="CollisionShape/CylinderHeight" to="Tick/DirectMovement" method="add_delta_y" binds= [ 0.5 ]]
[connection signal="colliding_changed" from="Uncrouch/Node/UncrouchRayCast" to="Input/CrouchAction" method="set_ignore_input"]
[connection signal="colliding_changed" from="Uncrouch/Node/UncrouchRayCast" to="Input/JumpAction" method="set_ignore_input"]
